# transidate

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yaml  test.yaml  transidate  transidate.pypi.yaml  transidate.yaml
tests/: conftest.py  constants.py  test_evaluators.py  test_output.py  test_transidate.py  test_validators.py  test_violations.py  test_xsd.py  test_zip.py
tests/data/: malformed.xml  netex1good.xml  sirivm2good.xml  txc21good.xml  txc24bad.xml  txc24good.xml
transidate/: __init__.py  cli.py  constants.py  datasets.py  default.ini  evaluators.py  exceptions.py  outputs.py  results.py  tables.py  typing.py  validators.py  violations.py  xsd.py  zip.py
