[tool.poetry]
name = "transidate"
version = "0.3.2"
description = "Commandline tool for XML transit data validation."
authors = ["Ciaran McCormick <ciaran@ciaranmccormick.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
lxml = "^4.6.2"
requests = "^2.24.0"
prettytable = "^2.0.0"
pydantic = "^1.8"
rich = "^9.12.4"
cryptography = "^3.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3"
flake8 = "^3.8.4"
ipdb = "^0.13.4"
ipython = "^7.20.0"
isort = "^5.7.0"
lxml-stubs = "^0.1.1"
mypy = "^0.790"
pre-commit = "^2.7.1"
pytest = "^6.2"
pytest-cov = "^2.10.1"
tox = "^3.20.1"
tox-pyenv = "^1.1.0"
safety = "^1.10.3"
doc8 = "^0.8.1"
freezegun = "^1.1.0"

[tool.coverage.run]
source = [".",]

[tool.coverage.report]
omit = ["*/.pyenv/*", "transidate/cli.py"]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
transidate = "transidate.cli:cli"
