[tool.poetry]
name = "transidate"
version = "0.4.0"
description = "Commandline tool for XML transit data validation."
authors = ["Ciaran McCormick <ciaran@ciaranmccormick.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

click = ">=8.0.0"
cryptography = ">=3.3.0"
lxml = ">=4.6.0"
prettytable = ">=2.0.0"
pydantic = ">=1.8.0"
requests = ">=2.24.0"
rich = ">=9.12.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
coverage = "^5.3"
doc8 = "^0.8.1"
flake8 = "^3.8.4"
freezegun = "^1.1.0"
ipdb = "^0.13.4"
ipython = "^7.20.0"
isort = "^5.7.0"
lxml-stubs = "^0.1.1"
mypy = "^0.900"
pip-audit = "^2.4.13"
pre-commit = "^2.7.1"
pytest = "^7.0.0"
pytest-cov = "^2.10.1"
types-requests = "^2.28.11.8"
types-freezegun = "^1.1.10"

[tool.coverage.run]
source = [".",]

[tool.coverage.report]
omit = ["*/.pyenv/*", "transidate/cli.py"]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
transidate = "transidate.cli:cli"
